--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>io.github.jelastic</groupId>
     <artifactId>jelastic</artifactId>
     <packaging>jar</packaging>
-    <version>7.2.0-7</version>
+    <version>7.2.0-8-SNAPSHOT</version>
 
     <licenses>
         <license>
@@ -72,7 +72,6 @@
         <elasticsearch.version>7.2.0</elasticsearch.version>
 
     </properties>
-
 
         <dependencies>
             <dependency>
