--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.grookage.jelastic</groupId>
     <artifactId>jelastic</artifactId>
     <packaging>jar</packaging>
-    <version>7.2.1-SNAPSHOT</version>
+    <version>7.2.1</version>
 
     <name>jelastic</name>
     <url>https://github.com/grookage/jelastic</url>
@@ -25,7 +24,7 @@
     <scm>
         <connection>scm:git:https://github.com/grookage/jelastic.git</connection>
         <developerConnection>scm:git:https://github.com/grookage/jelastic.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>jelastic-7.2.1</tag>
         <url>https://github.com/grookage/jelastic.git</url>
     </scm>
 
