--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <scm>
         <connection>scm:git:https://github.com/grookage/jelastic.git</connection>
         <developerConnection>scm:git:https://github.com/grookage/jelastic.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>jelastic-7.2.1-2</tag>
         <url>https://github.com/grookage/jelastic.git</url>
     </scm>
 
